styles: fixes: animal cards wrap, margin, tradeBtn position

--- a/styles.sass
+++ b/styles.sass
@@ -22,12 +22,13 @@
         width: 100vw
         padding: 2rem
         list-style: none
+        flex-wrap: wrap
         @include flex()
 
     &__animal
         width: 80px
         height: 50px
-        margin: 0 5px
+        margin: 5px
         border: 1px solid darkgray
         @include flex(center, center)
 
@@ -40,5 +41,5 @@
         border: 0
         border-radius: 50%
         text-align: center
-        @include pos(absolute)
+        @include pos(fixed)
         @include posBR(1rem, 3rem)
